adding new styles to various components, new functions and other minor changes

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    font-family: 'Cabin', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+/*  Pantallas grandes */
+
+@media (max-width: 1400px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+ /* Tabletas  */
+
+@media (max-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+ /* Celulares  */
+
+@media (max-width: 450px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+ */
+
+
+.slides .slick-prev,
+.slides .slick-next {
+  /* background-color: green; */
+  color: black;
+}
+
+.slides .slick-prev:before,
+.slides .slick-next:before {
+  color: rgb(26, 24, 24);
+}
+
+
+.SlideSize{
+  margin: 0 100px 0 100px;
 }
