--- a/src/styles/globalStyles.module.css
+++ b/src/styles/globalStyles.module.css
@@ -1,48 +1,100 @@
-.container_nav{
-    background: #ffffff;
-    background: linear-gradient(128deg, rgb(49, 27, 247)0%, rgb(190, 17, 147) 100%);
-    min-width: 120px;
-    /* width: 100rem; */
-    height: 6rem;
-    display: flex;
-    justify-content: space-between;
+.container_nav {
+  background: #ffffff;
+  background: linear-gradient(
+    128deg,
+    rgb(49, 27, 247) 0%,
+    rgb(190, 17, 147) 100%
+  );
+  min-width: 120px;
+  /* width: 100rem; */
+  height: 6rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-.container_nav >div > a{
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    text-decoration: none;
-    color: white;
-    padding: 1rem 1rem;
-
+.container_nav > div > a {
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  text-decoration: none;
+  color: white;
+  padding: 1rem 1rem;
 }
 
-.container_links{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 1rem 1rem;
-    /* align-items: start; */
+.container_links {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem 1rem;
+  /* align-items: start; */
 }
 
 /* Logo Styles */
 
-.container_logo{
-    background-color: black;
-    border-radius: 50%;
-    width: 5.5rem;
-    height: 5.5rem;
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    align-items: center;
+.container_logo {
+  background-color: black;
+  border-radius: 50%;
+  width: 5.5rem;
+  height: 5.5rem;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  align-items: center;
 }
 
-.container_logo > p{
-    color: white;
-    margin: 0 auto;
-    padding: 0;
+.container_logo > p {
+  color: white;
+  margin: 0 auto;
+  padding: 0;
   font-weight: bold;
   font-size: 0.8rem;
+}
+
+/* * Footer Styles */
+
+.footer {
+  display: flex;
+  /* flex: 1; */
+  padding: 1rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+}
+
+/* a:nth-child(2) */
+
+.footer > a {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 1;
+  text-decoration: none;
+  color: #000000;
+}
+
+.logo > img {
+  color: #000000;
+  /* background-color: #000000; */
+  fill: #000000;
+}
+
+/* TODO: each container under the other container */
+
+@media screen and (max-width: 700px) {
+  .footer {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer > .link > span {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer > a > span {
+    padding: 1rem 0;
+  }
 }
